# EncryptionService/src/main/resources/static/openapi.yml
@@ -16,7 +16,7 @@ tags:
 
 paths:
 
-  /api/v1/encrypt:
+  /api/v1/file/encrypt:
     post:
       tags: [File Encryption]
       summary: Encrypt a file
@@ -72,7 +72,7 @@ paths:
         '500':
           description: Encryption or Vault failure
 
-  /api/v1/decrypt:
+  /api/v1/file/decrypt:
     post:
       tags: [File Encryption]
       summary: Decrypt a file
